objects/EUR_CRM_Mechanic_Type__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Contract_Audit_Can_Reoccur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Audit Can Reoccur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Audit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Audit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Audit_Type__c</fullName>
        <label>Contract Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pouring Refund Spirits</fullName>
                </value>
                <value>
                    <fullName>Pouring Refund Wines</fullName>
                </value>
                <value>
                    <fullName>Selection Brands Spirits</fullName>
                </value>
                <value>
                    <fullName>Selection Brands Wines</fullName>
                </value>
                <value>
                    <fullName>Marketing Activity Spirits</fullName>
                </value>
                <value>
                    <fullName>Marketing Activity Wines</fullName>
                </value>
                <value>
                    <fullName>Trips</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Free Stock</fullName>
                </value>
                <value>
                    <fullName>Contract Lumpsum Value</fullName>
                </value>
                <value>
                    <fullName>Pouring Wine</fullName>
                </value>
                <value>
                    <fullName>Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
                <value>
                    <fullName>Marketing Activity</fullName>
                </value>
                <value>
                    <fullName>Pouring Spirits</fullName>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                </value>
                <value>
                    <fullName>Marketing Support</fullName>
                </value>
                <value>
                    <fullName>Point of Sales</fullName>
                </value>
                <value>
                    <fullName>House Pouring Spirits</fullName>
                </value>
                <value>
                    <fullName>Premium Pouring Spirits</fullName>
                </value>
                <value>
                    <fullName>House Pouring Champagne</fullName>
                </value>
                <value>
                    <fullName>Must Stock Item</fullName>
                </value>
                <value>
                    <fullName>May Stock Item</fullName>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Marketing A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Sales A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Listed</fullName>
                </value>
                <value>
                    <fullName>Pouring</fullName>
                </value>
                <value>
                    <fullName>Marketing Tailormade</fullName>
                </value>
                <value>
                    <fullName>Pouring Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclude_From_Contract_Actual_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Contract Actual Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_For_Compliance_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Compliance Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Budget_Exclusion_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the following affiliates:
1. Germany</description>
        <label>Has Budget Exclusion Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Lump_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Lump Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Multiple_Activity_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the following affiliate:
1. Germany</description>
        <label>Has Multiple Activity Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Payment_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines availability of Payment Term on contract content
For the following affiliate:
1. Germany</description>
        <label>Has Payment Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Per_BQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Per BQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Start_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Ignore_CM_Flagship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the Contract Activity won&apos;t use Flagship brand instead, show all Brands/BQ from product hierarchy

For the following affiliates:
1. Germany (DE)</description>
        <label>Ignore Contract Mechanic - Flagship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Pro_Rated_by_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines is amount will be pro-rated by month</description>
        <label>Is Pro-rated by Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Lump_Sum_Or_Per_BQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lump Sum Or Per BQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Process_Type__c</fullName>
        <formula>IF( AND(EUR_CRM_Has_Lump_Sum__c = TRUE, EUR_CRM_Has_Per_BQ__c = FALSE, EUR_CRM_Lump_Sum_Or_Per_BQ__c =FALSE), 
 &apos;LUMP_SUM_ONLY&apos;,  
 IF( AND(EUR_CRM_Has_Per_BQ__c = TRUE, EUR_CRM_Has_Lump_Sum__c = FALSE, EUR_CRM_Lump_Sum_Or_Per_BQ__c = FALSE), 
  &apos;PER_BQ_ONLY&apos;, 
   IF( EUR_CRM_Lump_Sum_Or_Per_BQ__c = TRUE, 
     &apos;LUMP_SUM_OR_PER_BQ&apos;, 
      IF(AND(EUR_CRM_Has_Lump_Sum__c = TRUE, EUR_CRM_Has_Per_BQ__c = TRUE), 
        &apos;BOTH&apos;, 
        null) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Process Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type_Name_English__c</fullName>
        <label>Mechanic Type Name - English</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term_By_MT__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>After Implementation</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly After Implementation</fullName>
                </value>
                <value>
                    <fullName>Beginning of Contract</fullName>
                </value>
                <value>
                    <fullName>Beginning of Contract item period</fullName>
                </value>
                <value>
                    <fullName>No Invoicing</fullName>
                </value>
                <value>
                    <fullName>3rd party invoicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Terms__c</fullName>
        <description>PR PT is the first country to use this field.</description>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mechanic Type (EU)</label>
    <listViews>
        <fullName>All_EUR_GB_Mechanic_Types</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Mechanic_Process_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_GB_Mechanic_Type</value>
        </filters>
        <label>All EUR GB Mechanic Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_DK_Mechanic_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Contract_Audit_Type__c</columns>
        <columns>EUR_CRM_Contract_Audit_Required__c</columns>
        <columns>EUR_CRM_For_Compliance_Check__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_Display_Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Has_Lump_Sum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_DK_Mechanic_Type</value>
        </filters>
        <label>All DK Mechanic Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_Mechanic_Type_View</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type_Name_English__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_For_Compliance_Check__c</columns>
        <columns>EUR_CRM_Contract_Audit_Required__c</columns>
        <columns>EUR_CRM_Contract_Audit_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Has_Lump_Sum__c</columns>
        <columns>EUR_CRM_Has_Multiple_Activity_Item__c</columns>
        <columns>EUR_CRM_Display_Order__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Lump_Sum_Mechanic_Type,EUR_CRM_Mechanic_Type__c.EUR_PT_Listing_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_House_Pour_Mechanic_Type,EUR_CRM_Mechanic_Type__c.EUR_PT_Volume_Targets_and_Rebates_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Events_Mechanic_Type,EUR_CRM_Mechanic_Type__c.EUR_PT_POS_Material_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Uniforms_Mechanic_Type,EUR_CRM_Mechanic_Type__c.EUR_PT_Drinks_Menu_Participation_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Drinks_Menu_Production_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Other_Marketing_Activities_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Bar_Styling_Mechanic_Type</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_PT_Trainings_Mechanic_Type</value>
        </filters>
        <label>EUR PT All Mechanic Type View</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Mechanic_Type_Data</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type_Name_English__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Mechanic_Process_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_ZA_Mechanic_Type</value>
        </filters>
        <label>All ZA Mechanic Type Data</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FI_Mechanic_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Contract_Audit_Type__c</columns>
        <columns>EUR_CRM_Display_Order__c</columns>
        <columns>EUR_CRM_Contract_Audit_Required__c</columns>
        <columns>EUR_CRM_For_Compliance_Check__c</columns>
        <columns>EUR_CRM_Contract_Audit_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Has_Lump_Sum__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Mechanic_Process_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic_Type__c.EUR_FI_Mechanic_Type</value>
        </filters>
        <label>FI Mechanic Type</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Mechanic Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mechanic Type (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Drinks_Menu_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Drinks Menu Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Events_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Events Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Mechanic_Type</fullName>
        <active>true</active>
        <description>Contract Activity Configuration - Germany</description>
        <label>DE Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Napkins_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Napkins Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Others_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Others Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_POS_Material_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE POS Material Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_POS_WKZ_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE POS WKZ Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Pouring_RV_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Pouring RV Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Training_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Training Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Visibility_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE Visibility Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WKZ_Fix_Amount_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR DE WKZ Fix Amount Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Mechanic_Type</fullName>
        <active>true</active>
        <description>Record Type for DK Mechanic Type</description>
        <label>EUR DK Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR FI Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Mechanic_Type</fullName>
        <active>true</active>
        <label>GB Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Bar_Styling_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Bar Styling Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Drinks_Menu_Participation_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Drinks Menu Participation Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Drinks_Menu_Production_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Drinks Menu Production Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Events_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Events Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_House_Pour_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT House Pour Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Listing_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Listing Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Lump_Sum_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Lump Sum Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Other_Marketing_Activities_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Other Marketing Activities Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_POS_Material_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT POS Material Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Trainings_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Trainings Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Uniforms_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Uniforms Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Volume_Targets_and_Rebates_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR PT Volume Targets and Rebates Mechanic Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Mechanic_Type</fullName>
        <active>true</active>
        <label>EUR ZA Mechanic Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>